# coursework_with_OOP

./: bridge.py  icons.qrc  icons_rc.py  interface.py  interface.ui  json_conf.py  main.py  specialities.json  test.py  user.py  users.json
C_part/: getSortedSpecialities.cpp  main.cpp
C_part/getSortedUniversities/: CMakeLists.txt  get_sorted_universities.cpp  main.cpp  main.h
C_part/searchUniversity/: CMakeLists.txt  search_universities.cpp
C_part/some/: some.sln  some.vcxproj  some.vcxproj.filters
C_part/some/x64/Debug/: some.exe.recipe  some.ilk  some.vcxproj.FileListAbsolute.txt  vc143.idb
C_part/some/x64/Debug/some.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  some.lastbuildstate
UsersPhoto/: 03336b37-7dab-44a5-968d-83edf2619870  39d71b0b-27d4-46ae-8166-fc6d386107ce  3c5b7146-48e5-4742-bcc7-54de0e407a8a  ca98d228-4965-4a57-8059-9324da5d6a14  ff205b48-d36e-4dce-8d34-a4b39436db14
